--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,6 +16,11 @@ target 'swift-2048' do
     'RCTText',
     'RCTNetwork',
     'RCTWebSocket', # needed for debugging
+    'RCTLinkingIOS',
+    'BatchedBridge',
+    'RCTImage',
+    'RCTAnimation'
+
     # Add any other subspecs you want to use in your project
   ]
   # Explicitly include Yoga if you are using RN >= 0.42.0
