--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "react": "^16.0.0-beta.5",
-    "react-native": "^0.52.2"
+    "react-native": "^0.52.2",
+    "react-navigation": "^1.0.0-beta.29"
   }
 }
